[package]
name = "mixin-sdk"
description = "mixin.one network sdk"
homepage = "https://github.com/liuzemei/mixin-rust-sdk/blob/main/README.md"
repository = "https://github.com/liuzemei/mixin-rust-sdk.git"
version = "0.0.2"
edition = "2018"
license-file = "LICENSE"
include = ["**/*.rs", "Cargo.toml"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-tls = "0.5.0"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.66"
crypto-hash = "0.3.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
frank_jwt = "3.1.2"
